Improved the function where the title would change when you aren't focussing on this tab, added some tweaks, AOS fixed for all elements, thats basically it

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <br />
-    <h1 class="middle">Projects</h1>
+    <h1 data-aos="fade-right" class="middle">Projects</h1>
   <section data-aos="fade-right" class="hero-section content-bar" id='content-bar' style='padding: 5%;'>
     <div class="card-grid">
       <a data-aos="fade-right" rel='noreferrer' target='_blank' class="card" href="https://www.chatbusiness.ai">
@@ -115,16 +115,16 @@
     <div data-aos="fade-up" id='contact'>
       <center>
         <h1 class="middle">Contact Me</h1> <br />
-      <a rel='noreferrer' target='_blank' class="btn" href="https://github.com/Raadsl">
+      <a title='Github' rel='noreferrer' target='_blank' class="btn" href="https://github.com/Raadsl">
         <i class="fab fa-github"></i>
       </a>
-      <a rel='noreferrer' target='_blank' class="btn" href="https://twitter.com/realRaadsel">
+      <a title="Twitter" rel='noreferrer' target='_blank' class="btn" href="https://twitter.com/realRaadsel">
         <i class="fab fa-twitter"></i>
       </a>
-      <a rel='noreferrer' target='_blank' class="btn" href="mailto://raadsel@jorik.email">
+      <a title='Mail me' rel='nofollow' target='_blank' class="btn" href="mailto:raadsel@jorik.email">
         <i class="fa fa-envelope" aria-hidden="true"></i>
       </a>
-      <a rel='noreferrer' target='_blank' class="btn" href="https://discord.com/users/790232461052608554">
+      <a title="Discord" rel='nofollow' target='_blank' class="btn" href="https://discord.com/users/790232461052608554">
         <i class="fab fa-discord"></i>
       </a>
         <!--
