--- a/index.html
+++ b/index.html
@@ -253,10 +253,15 @@
     <div style="padding: 5vw 0 0 0"></div>
     <footer>
       <div id='content-bar' class='content-bar'>
-      <strong
-        class='footertext'>&copy;<span data-tooltip='The year auto updates &#128526;' id="year"></span>
-        Raadsel
-      </strong>
+      <raadsel>
+        <div class="made-by">
+          <p>Made by</p>
+          <a href='https://raadsel.is-a.dev/'>
+            <img src="assets/Jorik-Loos-signature.png" alt="Jorik Loos' Signature">
+          </a>
+        </div>
+      </raadsel>
+        &copy;<span id="year"></span>
       </div>
     </footer>
     </div>
