--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="The personal website of Raadsel aka Jorik. It shows some projects I worked on, more information about me and ways to contact me!" />
   <meta property="description" content="The personal website of Raadsel aka Jorik Loos. It shows some projects I worked on, more information about me and ways to contact me!" />
   <meta name="theme-color" content="#FFDD40">
-  <meta name="viewport" content="width=device-width, initial-scale=0.9">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/raadsel.svg">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"
     integrity="sha512-BdHyGtczsUoFcEma+MfXc71KJLv/cd+sUsUaYYf2mXpfG/PtBjNXsPo78+rxWjscxUYN2Qr2+DbeGGiJx81ifg=="
@@ -72,7 +72,7 @@
         </p>
         <hr />
         <p>
-
+        <div class='buttons'>
           <button data-tooltip='Hire me!' onclick='window.open("mailto:hire@jorik.email", "_blank")'>
             <span> Hire me </span>
             <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
@@ -86,8 +86,15 @@
               <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
             </svg>
           </button>
+            |
+          <button data-tooltip="Buy me a coffee" onclick='window.open("https://www.buymeacoffee.com/raadsel", "_blank")'>
+            <span> Buy me a coffee </span>
+            <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+              <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+            </svg>
+          </button>
         </p>
-
+      </div>
       </div>
     </div>
     <!-- Modal content -->
