Changed portfolios and some other changes (dont remember them anymore)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       <div data-aos="fade-right" id='content-bar' class="content-bar">
         <p class="about-me-text">Hey, I'm <strong data-tooltip="I'm Jorik Loos, also known as Raadsel." class='sky-blue'>Jorik</strong>!</p>
         <p>
-          A <span title='Auto updates' id='age'>...</span> year old <strong data-tooltip="I just develop things:)" class="text">Developer</strong> based in <span id='time' data-tooltip="So the timezone is GMT+, Amsterdam">the <span class='red'>Neth</span><span class='white'>erl</span><span class='blue'>ands</span></span>. I'm passionate about creating cool designs and developing full-stack applications.
+          A <span title='Auto updates' id='age'>...</span> year old <strong data-tooltip="I just develop things:)" class="text">Developer</strong> based in 
+          <span id='time' data-tooltip="So the timezone is GMT+, Amsterdam">the <span class="magic"><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-text">Netherlands</span></span></span>. 
+          I'm passionate about creating cool designs and developing full-stack applications.
         </p>
         <hr />
         <p>
@@ -98,111 +100,111 @@
       </div>
     </div>
     <!-- Modal content -->
-<div id="skills-modal" class="skills-modal">
-  <div class="skills-modal-content">
-    <span class="skills-close" style='z-index: 6;position: sticky;'>&times;</span>
-    <h2 class='skills-title' style='font-family: sans-serif;'>My Skills</h2>
-    <p class='skills-desc'>
-      This is a list of what I have learned and used across my programming career.
-    </p>
-    <div class='skills-scroll-content'>
-    <h3>Currently learning</h3>
-    <ul class='skillsUL'>
-      <li class='skillslist'>React.js</li>
-      <li class='skillslist'>Next.js</li>
-      <li class='skillslist'>Java</li>
-    </ul>
-    <h3>Program Languages</h3>
-    <ul class='skillsUL'>
-      <li data-tooltip="Python my beloved" class='skillslist'>Python</li>
-      <li data-tooltip="Javascript != Java" class='skillslist'>Javascript</li>
-      <ul>
-        <li data-tooltip="Node JS is an interpreter or running environment for a JavaScript programming language" class='skillslist'>NodeJS</li>
-        <li class='skillslist'>Deno</li>
-        <li data-tooltip="HTML,CSS,JS etc" class='skillslist'>Website markup languages</li>
-      </ul>
-    </ul>
-    <h3>Languages</h3>
-    <ul class='skillsUL'>
-      <li class='skillslist'>English</li>
-      <li class='skillslist'>Dutch</li>
-      <li class='skillslist'>German</li>
-      <li data-tooltip='I HATE the french language, but I know a bit' class='skillslist'>French (a little bit)</li>
-    </ul>
-    <h3>Web Frameworks</h3>
-    <ul class='skillsUL'>
-      <li data-tooltip="Python package" class='skillslist'>Flask</li>
-      <li data-tooltip="NodeJS package" class='skillslist'>Express.js</li>
-      <li data-tooltip="Python package" class='skillslist'>FastAPI</li>
-    </ul>
-    <h3>APIs</h3>
-    <ul class='skillsUL'>
-      <li class='skillslist'>REST</li>
-      <li class='skillslist'>GraphQL</li>
-    </ul>
-    <h3>Payment systems</h3>
+  <div id="skills-modal" class="skills-modal">
+    <div class="skills-modal-content">
+      <span class="skills-close" style='z-index: 6;position: sticky;'>&times;</span>
+      <h2 class='skills-title' style='font-family: sans-serif;'>My Skills</h2>
+      <p class='skills-desc'>
+        This is a list of what I have learned and used across my programming career.
+      </p>
+      <div class='skills-scroll-content'>
+      <h3>Currently learning</h3>
       <ul class='skillsUL'>
-        <li data-tooltip="Used it in www.startingup.ai" class='skillslist'>Stripe</li>
+        <li class='skillslist'>React.js</li>
+        <li class='skillslist'>Next.js</li>
+        <li class='skillslist'>Java</li>
       </ul>
-    <h3>Databases</h3>
-    <ul class='skillsUL'>
-      <li class='skillslist'>Supabase</li>
-      <li class='skillslist'>Mongodb</li>
-      <li class='skillslist'>Firebase</li>
-      <li class='skillslist'>Postgresql</li>
-      <li class='skillslist'>SQL(ite)</li>
-    </ul>
-    <h3>Artificial Intelligence</h3>
-    <ul class='skillsUL'>
-      <li class='skillslist'>GPT-3(.5)</li>
-      <li class='skillslist'>Codex</li>
-      <li class='skillslist'>DALL-E 2</li>
-      <li class='skillslist'>Stable Diffusion</li>
-    </ul>
-    <h3>Data Logging</h3>
-     <ul class='skillsUL'>
-       <li class='skillslist'>Datadog</li>
-       <li class='skillslist'>Discord Webhooks</li>
-       <li class='skillslist'>Slack Webhooks</li>
-     </ul>
-    <h3>Config Formats</h3>
-     <ul class='skillsUL'>
-       <li data-tooltip="JavaScript Object Notation" class='skillslist'>JSON</li>
-       <li data-tooltip="comma-separated values" class='skillslist'>CSV</li>
-       <li data-tooltip="yet another markup language" class='skillslist'>YAML</li>
-       <li data-tooltip="Tom's Obvious, Minimal Language" class='skillslist'>TOML</li>
-     </ul>
-    <h3>Tooling</h3>
-    <ul class='skillsUL'>
-      <li data-tooltip="Git != Github" class='skillslist'>Git</li>
-      <li class='skillslist'>NPM</li>
-      <li class='skillslist'>Pypi</li>
-      <li class='skillslist'>JSHint</li>
-      <li class='skillslist'>Heroku</li>
-      <li class='skillslist'>Docker</li>
-      <li data-tooltip="Sort of HTML" class='skillslist'>Babel</li>
-      <li class='skillslist'>SocketIO</li>
-    </ul>
-    <h3>Wire Formats</h3>
-    <ul class='skillsUL'>
-      <li data-tooltip="JavaScript Object Notation" class='skillslist'>JSON</li>
-      <li class='skillslist'>Form data</li>
-      <li data-tooltip="Extensible Markup Language"  class='skillslist'>XML</li>
-      <li class='skillslist'>Google Protocol Buffers</li>
-    </ul>
-    <h3>Styling</h3>
-    <ul class='skillsUL'>
-      <li data-tooltip="Cascading Style Sheets" class='skillslist'>CSS</li>
-      <li data-tooltip="Sassy Cascading Style Sheets" class='skillslist'>SCSS</li>
-      <li class='skillslist'>TailwindCSS</li>
-      <li class='skillslist'>Bootstrap</li>
-      <li class='skillslist'>vanilla-extract</li>
-    </ul>
+      <h3>Program Languages</h3>
+      <ul class='skillsUL'>
+        <li data-tooltip="Python my beloved" class='skillslist'>Python</li>
+        <li data-tooltip="Javascript != Java" class='skillslist'>Javascript</li>
+        <ul>
+          <li data-tooltip="Node JS is an interpreter or running environment for a JavaScript programming language" class='skillslist'>NodeJS</li>
+          <li class='skillslist'>Deno</li>
+          <li data-tooltip="HTML,CSS,JS etc" class='skillslist'>Website markup languages</li>
+        </ul>
+      </ul>
+      <h3>Languages</h3>
+      <ul class='skillsUL'>
+        <li class='skillslist'>English</li>
+        <li class='skillslist'>Dutch</li>
+        <li class='skillslist'>German</li>
+        <li data-tooltip='I HATE the french language, but I know a bit' class='skillslist'>French (a little bit)</li>
+      </ul>
+      <h3>Web Frameworks</h3>
+      <ul class='skillsUL'>
+        <li data-tooltip="Python package" class='skillslist'>Flask</li>
+        <li data-tooltip="NodeJS package" class='skillslist'>Express.js</li>
+        <li data-tooltip="Python package" class='skillslist'>FastAPI</li>
+      </ul>
+      <h3>APIs</h3>
+      <ul class='skillsUL'>
+        <li class='skillslist'>REST</li>
+        <li class='skillslist'>GraphQL</li>
+      </ul>
+      <h3>Payment systems</h3>
+        <ul class='skillsUL'>
+          <li data-tooltip="Used it in www.startingup.ai and www.presentationmaker.ai" class='skillslist'>Stripe</li>
+        </ul>
+      <h3>Databases</h3>
+      <ul class='skillsUL'>
+        <li class='skillslist'>Supabase</li>
+        <li class='skillslist'>Mongodb</li>
+        <li class='skillslist'>Firebase</li>
+        <li class='skillslist'>Postgresql</li>
+        <li class='skillslist'>SQL(ite)</li>
+      </ul>
+      <h3>Artificial Intelligence</h3>
+      <ul class='skillsUL'>
+        <li class='skillslist'>GPT-3(.5)/GPT-4</li>
+        <li class='skillslist'>Codex</li>
+        <li class='skillslist'>DALL-E 2</li>
+        <li class='skillslist'>Stable Diffusion</li>
+      </ul>
+      <h3>Data Logging</h3>
+       <ul class='skillsUL'>
+         <li class='skillslist'>Datadog</li>
+         <li class='skillslist'>Discord Webhooks</li>
+         <li class='skillslist'>Slack Webhooks</li>
+       </ul>
+      <h3>Config Formats</h3>
+       <ul class='skillsUL'>
+         <li data-tooltip="JavaScript Object Notation" class='skillslist'>JSON</li>
+         <li data-tooltip="comma-separated values" class='skillslist'>CSV</li>
+         <li data-tooltip="yet another markup language" class='skillslist'>YAML</li>
+         <li data-tooltip="Tom's Obvious, Minimal Language" class='skillslist'>TOML</li>
+       </ul>
+      <h3>Tooling</h3>
+      <ul class='skillsUL'>
+        <li data-tooltip="Git != Github" class='skillslist'>Git</li>
+        <li class='skillslist'>NPM</li>
+        <li class='skillslist'>Pypi</li>
+        <li class='skillslist'>JSHint</li>
+        <li class='skillslist'>Heroku</li>
+        <li class='skillslist'>Docker</li>
+        <li data-tooltip="Sort of HTML" class='skillslist'>Babel</li>
+        <li class='skillslist'>SocketIO</li>
+      </ul>
+      <h3>Wire Formats</h3>
+      <ul class='skillsUL'>
+        <li data-tooltip="JavaScript Object Notation" class='skillslist'>JSON</li>
+        <li class='skillslist'>Form data</li>
+        <li data-tooltip="Extensible Markup Language"  class='skillslist'>XML</li>
+        <li class='skillslist'>Google Protocol Buffers</li>
+      </ul>
+      <h3>Styling</h3>
+      <ul class='skillsUL'>
+        <li data-tooltip="Cascading Style Sheets" class='skillslist'>CSS</li>
+        <li data-tooltip="Sassy Cascading Style Sheets" class='skillslist'>SCSS</li>
+        <li class='skillslist'>TailwindCSS</li>
+        <li class='skillslist'>Bootstrap</li>
+        <li class='skillslist'>vanilla-extract</li>
+      </ul>
+      </div>
     </div>
   </div>
-</div>
-    <br />
-    <h1 title="My project page" data-aos="fade-right" class="middle">Projects</h1>
+  <br />
+  <h1 title="My project page" data-aos="fade-right" class="middle">Projects</h1>
   <section data-aos="fade-right" class="hero-section content-bar" id='content-bar' style='padding: 5%;'>
     <div class="card-grid">
       <a data-aos="fade-right" rel='noreferrer' target='_blank' class="card" href="https://www.chatbusiness.ai">
@@ -222,10 +224,10 @@
       </a>
       
       <a data-aos="fade-up-left" rel='noreferrer' target='_blank' class="card" href="https://website-spammer.raadsel.repl.co">
-        <div class="card__background" alt='Logo by BrandnewLogo of Website spammer' style="background-image: url('/assets/Wspammer.png')"></div>
+        <div class="card__background" alt='Logo by BrandnewLogo of Website spammer' style="background-image: url('/assets/BoostingAI.png')"></div>
         <div class="card__content">
-          <p data-tooltip="This is a personal project I made for fun" class="card__category">Personal &#x2022; Fun</p>
-          <h3 title="Source code is public" class="card__heading">Website-spammer</h3>
+           <p data-tooltip="This was a paid project that uses AI." class="card__category">Paid project &#x2022; AI</p>
+           <h3 title="Source code i not public" class="card__heading">Boosting.ai</h3>
         </div>
       </a>
       
@@ -278,4 +280,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init();</script> 
   <script src='JS/credits.js'></script>
+  
 </html>
