Fixed some things - from feedback Dillon
Also edited allprojects.txt

--- a/index.html
+++ b/index.html
@@ -69,28 +69,26 @@
         <p class="about-me-text">Hey, I'm <strong data-tooltip="I'm Jorik Loos, also known as Raadsel." class='sky-blue'>Jorik</strong>!</p>
         <p>
           A <span title='Auto updates' id='age'>...</span> year old <strong data-tooltip="I just develop things:)" class="text">Developer</strong> based in 
-          <span id='time' data-tooltip="So the timezone is GMT+, Amsterdam">the <span class="magic"><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-star"><svg viewBox="0 0 512 512"><path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" /></svg></span><span class="magic-text">Netherlands</span></span></span>. 
+          <span id='time' data-tooltip="So the timezone is GMT+, Amsterdam">the <span class="magic"><span class="magic-star"></span><span class="magic-text">Netherlands</span></span></span>. 
           I'm passionate about creating cool designs and developing full-stack applications.
         </p>
         <hr />
         <p>
         <div class='buttons'>
-          <button data-tooltip='Hire me!' onclick='window.open("mailto:hire@jorik.email", "_blank")'>
+          <button data-tooltip='Hire me!' onclick='window.open("mailto:hire+jorikloos@gmail.com", "_blank")'>
             <span> Hire me </span>
             <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
               <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
             </svg>
           </button>
-            |
           <button data-tooltip="View my skillset" id='open-modal-btn'>
             <span> Skillset </span>
             <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
               <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
             </svg>
           </button>
-            |
           <button data-tooltip="Buy me a coffee" onclick='window.open("https://www.buymeacoffee.com/raadsel", "_blank")'>
-            <span> Buy me a coffee </span>
+            <span> Buy me a ☕️ </span>
             <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
               <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
             </svg>
@@ -110,11 +108,11 @@
       <div class='skills-scroll-content'>
       <h3>Currently learning</h3>
       <ul class='skillsUL'>
-        <li class='skillslist'>React.js</li>
-        <li class='skillslist'>Next.js</li>
-        <li class='skillslist'>Java</li>
+        <li data-tooltip="A javascript web-framework" class='skillslist'>React.js</li>
+        <li  data-tooltip="A javascript web-framework" class='skillslist'>Next.js</li>
+        <li data-tooltip="For Minecraft plugins" class='skillslist'>Java</li>
       </ul>
-      <h3>Program Languages</h3>
+      <h3>Programming Languages</h3>
       <ul class='skillsUL'>
         <li data-tooltip="Python my beloved" class='skillslist'>Python</li>
         <li data-tooltip="Javascript != Java" class='skillslist'>Javascript</li>
@@ -126,10 +124,10 @@
       </ul>
       <h3>Languages</h3>
       <ul class='skillsUL'>
-        <li class='skillslist'>English</li>
-        <li class='skillslist'>Dutch</li>
-        <li class='skillslist'>German</li>
-        <li data-tooltip='I HATE the french language, but I know a bit' class='skillslist'>French (a little bit)</li>
+        <li data-tooltip="fluently" class='skillslist blur-list'>English</li>
+        <li data-tooltip='native' class='skillslist'>Dutch</li>
+        <li data-tooltip="Can make myself understandable" class='skillslist'>German</li>
+        <li data-tooltip='I hate the french language, but I know a bit' class='skillslist'>French (a little bit)</li>
       </ul>
       <h3>Web Frameworks</h3>
       <ul class='skillsUL'>
@@ -139,27 +137,27 @@
       </ul>
       <h3>APIs</h3>
       <ul class='skillsUL'>
-        <li class='skillslist'>REST</li>
-        <li class='skillslist'>GraphQL</li>
+        <li data-tooltip="used for most of my things" class='skillslist'>REST</li>
+        <li data-tooltip="used for replit's API" class='skillslist'>GraphQL</li>
       </ul>
       <h3>Payment systems</h3>
         <ul class='skillsUL'>
-          <li data-tooltip="Used it in www.startingup.ai and www.presentationmaker.ai" class='skillslist'>Stripe</li>
+          <li data-tooltip="Used in www.startingup.ai and www.presentationmaker.ai" class='skillslist'>Stripe</li>
         </ul>
       <h3>Databases</h3>
       <ul class='skillsUL'>
-        <li class='skillslist'>Supabase</li>
-        <li class='skillslist'>Mongodb</li>
-        <li class='skillslist'>Firebase</li>
-        <li class='skillslist'>Postgresql</li>
-        <li class='skillslist'>SQL(ite)</li>
+        <li data-tooltip="Not used in a public project yet" class='skillslist'>Supabase</li>
+        <li data-tooltip="Not used in a public project yet" class='skillslist'>Mongodb</li>
+        <li data-tooltip="Not used in a public project yet" class='skillslist'>Fire-store</li>
+        <li data-tooltip="SQL" class='skillslist'>Postgresql</li>
+        <li data-tooltip="SQL" class='skillslist'>SQL(ite)</li>
       </ul>
       <h3>Artificial Intelligence</h3>
       <ul class='skillsUL'>
-        <li class='skillslist'>GPT-3(.5)/GPT-4</li>
-        <li class='skillslist'>Codex</li>
-        <li class='skillslist'>DALL-E 2</li>
-        <li class='skillslist'>Stable Diffusion</li>
+        <li data-tooltip="Generative Pre-training Transformer. and other OpenAI API's" class='skillslist'>GPT-3(.5)/GPT-4</li>
+        
+        <li data-tooltip="An image generator AI by openAI" class='skillslist'>DALL-E 2</li>
+        <li data-tooltip="Also an image generator AI" class='skillslist'>Stable Diffusion</li>
       </ul>
       <h3>Data Logging</h3>
        <ul class='skillsUL'>
@@ -177,13 +175,13 @@
       <h3>Tooling</h3>
       <ul class='skillsUL'>
         <li data-tooltip="Git != Github" class='skillslist'>Git</li>
-        <li class='skillslist'>NPM</li>
-        <li class='skillslist'>Pypi</li>
+        <li data-tooltip="NodeJS packages" class='skillslist'>NPM</li>
+        <li data-tooltip="Python packages " class='skillslist'>Pypi</li>
         <li class='skillslist'>JSHint</li>
-        <li class='skillslist'>Heroku</li>
+        <li data-tooltip="hosting" class='skillslist'>Heroku</li>
         <li class='skillslist'>Docker</li>
         <li data-tooltip="Sort of HTML" class='skillslist'>Babel</li>
-        <li class='skillslist'>SocketIO</li>
+        <li data-tooltip="For transferring data between client and server" class='skillslist'>SocketIO</li>
       </ul>
       <h3>Wire Formats</h3>
       <ul class='skillsUL'>
@@ -223,7 +221,7 @@
         </div>
       </a>
       
-      <a data-aos="fade-up-left" rel='noreferrer' target='_blank' class="card" href="https://website-spammer.raadsel.repl.co">
+      <a data-aos="fade-up-left" rel='noreferrer' target='_blank' class="card" href="https://www.boosting.ai">
         <div class="card__background" alt='Logo by BrandnewLogo of Website spammer' style="background-image: url('/assets/BoostingAI.png')"></div>
         <div class="card__content">
            <p data-tooltip="This was a paid project that uses AI." class="card__category">Paid project &#x2022; AI</p>
@@ -250,7 +248,7 @@
         <a title="Twitter" rel='noreferrer' target='_blank' class="btn" href="https://twitter.com/realRaadsel">
           <i class="fab fa-twitter"></i>
         </a>
-        <a title='Mail me' rel='nofollow' target='_blank' class="btn" href="mailto:raadsel@jorik.email">
+        <a title='Mail me' rel='nofollow' target='_blank' class="btn" href="mailto:devcontact+jorik.loos@gmail.com">
           <i class="fa fa-envelope" aria-hidden="true"></i>
         </a>
         <a title="Discord" rel='nofollow' target='_blank' class="btn" href="https://discord.com/users/790232461052608554">
