Fixed text overflow on small screens & made about me easier to read
Small screen = my 13 inch chromebook.
Easier to read = feedback from MrVoo: `The typing effect makes that block hard to read, and "Netherlands" is smaller text than the rest :P`

--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
       <div data-aos="fade-right" id='content-bar' class="content-bar">
         <p class="about-me-text">Hey, I'm <strong data-tooltip="I'm Jorik Loos, also known as Raadsel." class='sky-blue'>Jorik</strong>!</p>
         <p>
-          A <span title='Auto updates' id='age'>...</span> year old <strong data-tooltip="I just develop things:)" class="text">Developer</strong> based in 
+          A <span title='Auto updates' id='age'>...</span> year old <strong data-tooltip="I just develop things:)" class="text">Developer</strong>
+        </p>
+        <p> 
+          I'm based in 
           <span id='time' data-tooltip="So the timezone is GMT+, Amsterdam">the <span class="magic"><span class="magic-star"></span><span class="magic-text">Netherlands</span></span></span>. 
-          I'm passionate about creating cool designs and developing full-stack applications.
+          and I'm passionate about creating cool designs and developing full-stack applications.
         </p>
         <hr />
         <p>
@@ -209,7 +212,7 @@
         <div class="card__background" alt='Photo by Volodymyr Hryshchenko on Unsplash of a Chatblob' style="background-image: url('/assets/volodymyr-hryshchenko-CHAT.webp')"></div>
         <div class="card__content">
           <p data-tooltip="This was a paid project that uses AI." class="card__category">Paid project &#x2022; AI</p>
-          <h3 title="Source code isn't public" class="card__heading">ChatBusinessAI</h3>
+          <h3 title="Source code isn't public" class="card__heading">Chat-Business.ai</h3>
         </div>
       </a>
       
