--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
   <link href="CSS/style.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <noscript>
-    <h1>Most of this site's functionality requires JavaScript. Please enable JavaScript for the full experience.</h1>
-</noscript>
   <div id="blob"></div>
   <div id="blur"></div>
   <div id='' class="main">
@@ -42,6 +39,7 @@
      </div>
     <div class="name">
       <div title="Raadsel" id="text-drop">
+        
         <div class="r">R</div>
         <div class="a">a</div>
         <div class="a2">a</div>
@@ -52,6 +50,9 @@
         <div title=';-)' class="smile">:)</div>
       </div>
       <div class="container">
+        <noscript style='z-index: 99:'>
+    <h1>Most of this site's functionality requires JavaScript. Please enable JavaScript to see the rest of the site..</h1>
+        </noscript>
       <h2 data-value="A Developer" class='small outline'data-m="reveal-right" title="Is a developer" data-m-delay="1.2" id='ADEV'>A Developer</h2>
       </div>
     </div>
@@ -133,7 +134,7 @@
         <li data-tooltip="fluently" class='skillslist blur-list'>English</li>
         <li data-tooltip='native' class='skillslist'>Dutch</li>
         <li data-tooltip="Can make myself understandable" class='skillslist'>German</li>
-        <li data-tooltip='I hate the french language, but I know a bit' class='skillslist'>French (a little bit)</li>
+        <li data-tooltip='I hate the french language, but I know it enough to make myself understandable' class='skillslist'>French (a little bit)</li>
       </ul>
       <h3>Web Frameworks</h3>
       <ul class='skillsUL'>
