--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <hr />
         <p>
         <div class='buttons'>
-          <button data-tooltip='Hire me!' onclick='window.open("mailto:hire+jorikloos@gmail.com", "_blank")'>
+          <button data-tooltip='Hire me!' onclick='window.open("mailto:iraadsel+hire@gmail.com", "_blank")'>
             <span> Hire me </span>
             <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
               <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
