Fixed some animations and 'timezone fix' fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--verify-->
   <meta name="google-site-verification" content="wfJ6rn4kUL_b7c0iF_oUPzeSmFLkRxN9yRe4Bem3zCw" />
   <!--Custom CSS-->
-  <link href="CSS/style.min.css" rel="stylesheet" type="text/css">
+  <link href="CSS/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="blob"></div>
@@ -157,7 +157,7 @@
         <li data-tooltip="Not used in a public project yet" class='skillslist'>Mongodb</li>
         <li data-tooltip="Not used in a public project yet" class='skillslist'>Fire-store</li>
         <li data-tooltip="SQL" class='skillslist'>Postgresql</li>
-        <li data-tooltip="SQL" class='skillslist'>SQL(ite)</li>
+        <li data-tooltip="SQL" class='skillslist'>(My)SQL(ite)</li>
       </ul>
       <h3>Artificial Intelligence</h3>
       <ul class='skillsUL'>
