--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </a>
       
       <a data-aos="fade-up-right" rel='noreferrer' target='_blank' class="card" href="https://github.com/Raadsl/Logo-generator">
-        <div class="card__background" data-src="/assets/project-AIlogo.TT"></div>
+        <div class="card__background" data-src="/assets/project-AIlogo.webp"></div>
         <div class="card__content">
           <p data-tooltip="This was a paid project that uses AI." class="card__category">Paid project &#x2022; AI</p>
           <h3 title="Source code is public, just no public site" class="card__heading">Logo generator</h3>
