updated some things

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="title" content="Raadsel">
   <meta name="author" content="Jorik/Raadsel">
-  <meta property="og:title" content="Jorik's portfolio" />
+  <meta property="og:title" content="Jorik's personal website" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://raadsel.is-a.dev" />
   <meta property="og:image" content="/assets/pfp.jpeg" />
@@ -275,7 +275,7 @@
           </a>
         </div>
       </raadsel>
-        &copy;<span id="year"></span>
+        &copy;<span id="year"></span> Jorik
       </div>
     </footer>
     </div>
