fix hover effect of "A developer"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--verify-->
   <meta name="google-site-verification" content="wfJ6rn4kUL_b7c0iF_oUPzeSmFLkRxN9yRe4Bem3zCw" />
   <!--Custom CSS-->
-  <link href="CSS/style.css" rel="stylesheet" type="text/css">
+  <link href="CSS/style.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="blob"></div>
