--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
       <div class='skills-scroll-content'>
       <h3>Currently learning</h3>
       <ul class='skillsUL'>
-        <li data-tooltip="A javascript web-framework" class='skillslist'>React.js</li>
-        <li  data-tooltip="A javascript web-framework" class='skillslist'>Next.js</li>
         <li data-tooltip="For Minecraft plugins" class='skillslist'>Java</li>
       </ul>
       <h3>Programming Languages</h3>
@@ -128,6 +126,7 @@
           <li class='skillslist'>Deno</li>
           <li data-tooltip="HTML,CSS,JS etc" class='skillslist'>Website markup languages</li>
         </ul>
+        <li data-tooltip="For Arduino">C++</li>
       </ul>
       <h3>Languages</h3>
       <ul class='skillsUL'>
