update skill list to be more accurate

--- a/index.html
+++ b/index.html
@@ -124,14 +124,13 @@
           <li class='skillslist'>Deno</li>
           <li data-tooltip="HTML,CSS,JS etc" class='skillslist'>Website markup languages</li>
         </ul>
-        <li data-tooltip="For Arduino">C++</li>
+        <li data-tooltip="Arduino is C++ but a bit different">Arduino</li>
       </ul>
       <h3>Languages</h3>
       <ul class='skillsUL'>
         <li data-tooltip="fluently" class='skillslist blur-list'>English</li>
         <li data-tooltip='native' class='skillslist'>Dutch</li>
         <li data-tooltip="Can make myself understandable" class='skillslist'>German</li>
-        <li data-tooltip='I had it 2 years in school' class='skillslist'>French (a little bit)</li>
         <li data-tooltip="Still learning" class='skillslist'>Spanish (still learning)</li>
       </ul>
       <h3>Web Frameworks</h3>
@@ -193,7 +192,6 @@
         <li data-tooltip="JavaScript Object Notation" class='skillslist'>JSON</li>
         <li class='skillslist'>Form data</li>
         <li data-tooltip="Extensible Markup Language"  class='skillslist'>XML</li>
-        <li class='skillslist'>Google Protocol Buffers</li>
       </ul>
       <h3>Styling</h3>
       <ul class='skillsUL'>
